Fixes #999: Fix link to report issue form from ooops page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1137 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -967,7 +967,7 @@ equal_to = equal to
 
 error_encountered = Error Encountered
 
-error_page = <P>This can be for a number of reasons, which may or may not have to do with the ClinCapture application.  If there are any system messages above this text, please copy and paste them into the<a href="http://www.clinovo.com/"> Report Issue Form</a>. <P>If there are no other messages, you might try clicking on the links in the navigation, and see what happens.  This might  reinitialize your connection with the database. Or click Back-button to go back to where you came from. <P>If you can't get back to a working page, please let us know!  Please be sure to include <ul> <li>what you were doing, <li>when it happened, <li>and any other details (like error messages) that might be important. </ul> <P>Thank you! <P>The ClinCapture Development Team
+error_page = <P>This can be for a number of reasons, which may or may not have to do with the ClinCapture application.  If there are any system messages above this text, please copy and paste them into the<a href="{0}"> Report Issue Form</a>. <P>If there are no other messages, you might try clicking on the links in the navigation, and see what happens.  This might  reinitialize your connection with the database. Or click Back-button to go back to where you came from. <P>If you can't get back to a working page, please let us know!  Please be sure to include <ul> <li>what you were doing, <li>when it happened, <li>and any other details (like error messages) that might be important. </ul> <P>Thank you! <P>The ClinCapture Development Team
 
 estimated_completion_date = Estimated Completion Date
 
