Fixes #905: Password reset verbiage update. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1164 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -1618,7 +1618,7 @@ oid = oid
 
 old = Old
 
-old_password = Old Password
+old_password = Current Password
 
 one_name_per_line = one name per line
 
