--- a/core/src/main/java/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words_en.properties
@@ -1239,7 +1239,7 @@ official_title = Official Title
 
 oid = oid
 
-old_password = Old Password
+old_password = Current Password
 
 one_name_per_line = one name per line
 
