--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1505,7 +1505,7 @@ official_title = Official Title
 
 oid = oid
 
-old_password = Old Password
+old_password = Current Password
 
 one_name_per_line = one name per line
 
