Fixes #1058: Data should be clickable in "Events Completion" widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1176 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3192,7 +3192,7 @@ completed = Completed
 customize_home_page = Customize Home Page
 
 # widgets headers
-nds_assigned_to_me_widget_header = My discrepancies
+nds_assigned_to_me_widget_header = My Discrepancies
 events_completion_widget_header = Events Completion
 
 # toolbar header
