Fixes #1059: Display error message when widget cannot load due to missing widget file. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1196 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -725,12 +725,14 @@ you_choose_to_remove_the_following_subject = you choose to remove the following 
 
 you_choose_to_restore_the_following_CRF = You choose to restore the following CRF
 
-you_choose_to_restore_the_following_study = You choose to restore the following study
-
 your_account_has_been_restored_and_password_reset = Your account on the ClinCapture system has been restored, and your password has been reset.  Your login information follows
+
 your_openclinica_account_password_reset = Your ClinCapture account password has been reset
+
 your_openclinica_password = Your ClinCapture password
+
 your_password_has_been_reset_as = Your password has been reset as
+
 your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
 
 notification_deleting_role = Your ClinCapture user role has been deleted
@@ -767,19 +769,10 @@ your_clin_capture_account_has_been_removed = Your ClinCapture account has been r
 
 your_new_openclinica_account_has_been_restored = Your ClinCapture account has been restored
 
-your_openclinica_account_password_reset = Your ClinCapture account password has been reset
-
-your_openclinica_password = your ClinCapture password
-
-
 the_study_site_status_is = The study/site status is
-welcome_to = Welcome to
+
 notes_assigned_to_me= Notes & Discrepancies Assigned to Me:\t
 unresolved_discrepancies_assigned_to_me = Unresolved Discrepancies Assigned to Me:\t
-
-your_password_has_been_reset_as = Your password has been reset as
-
-your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
 
 html_output=Extract to HTML
 html_output_link=Click here
@@ -824,6 +817,8 @@ this_action_was_triggered = This action was triggered
 due_to_excessive_failed_login_attempts = due to excessive failed login attempts
 when_a_user_tried_to_login_with_this_account = when a user tried to login with this account
 after_a_period_of_inactivity_of_more_than = after a period of inactivity of more than
+
+widget_error_message_cannot_load_widget = Cannot load widget because the corresponding widget file "{0}" does not exist in the widgets folder.
 
 design_implement_coding =  This window allows you to perform medical coding on CRF items that have been defined to be coded, by clicking on the 'Code' icon. <p>Note that this is a list of items that have already been saved during data entry. You can review the CRF directly by clicking on the 'Open CRF' icon and if necessary send queries to the site.</p><p> If enabled, auto-coding can be performed on synonym terms already coded using a custom dictionary. Medical codes can be un-coded or permanently deleted from the custom dictionary.</p>
 drag_n_drop_instruction = Drag and drop reports to change your Home Page layout
