Fixes #1082: Create "Subject Status Count" widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1202 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3194,6 +3194,7 @@ customize_home_page = Customize Home Page
 # widgets headers
 nds_assigned_to_me_widget_header = My Discrepancies
 events_completion_widget_header = Events Completion
+subject_status_count_widget_header = Subject Status Count
 
 # toolbar header
 available_widgets = Available Widgets
