Refs #587: Option to create a Subject from an import file. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1206 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1063,6 +1063,8 @@ study_subject_id_should_be_specifyed=The Study Subject Id should be specified.
 
 study_subject_id_is_not_unique_in_the_study_you_may_change_the_study_param = Your Study Subject Id {0} is not unique in the Study. You may change the study parameter 'How to Generate the Study Subject ID' to auto-generated.
 
+study_subject_id_should_be_empty=You have picked auto-generation for the study parameters, but have a value in the StudySubjectID. Please either remove the value or change your settings to manual entry only.
+
 your_user_name_used_by_other_try_another = Your user name has been used by other users. Please try another name.
 
 your_xml_in_the_file = Your XML in the file {0} was well formed, but generated {1} metadata errors.
