Fixes #1107: Implement the study-progress widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1212 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3195,6 +3195,7 @@ customize_home_page = Customize Home Page
 nds_assigned_to_me_widget_header = My Discrepancies
 events_completion_widget_header = Events Completion
 subject_status_count_widget_header = Subject Status Count
+study_progress_widget_header = Study Progress
 
 # toolbar header
 available_widgets = Available Widgets
