Fixes #1021: Add default ND descriptions to the app. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1218 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1285,3 +1285,17 @@ was_skipped = was skipped
 we_have_found_a_diplicate = We have found a duplicate in the XML for the Item OID {0}.  Please remove the extra Item Data from your XML.
 
 subject_id_not_found = Subject's id not found
+
+# default discrepancy descriptions
+corrected_CRF_data = Corrected CRF data
+CRF_data_was_correctly_entered = CRF data was correctly entered
+need_additional_clarification = Need additional clarification
+requested_information_is_provided = Requested information is provided
+query_response_monitored = Query response monitored
+CRF_data_change_monitored = CRF data change monitored
+calendared_event_monitored = Calendared event monitored
+failed_edit_check_monitored = Failed edit check monitored
+corrected_CRF_data_entry_error = Corrected CRF data entry error
+source_data_was_missing = Source data was missing
+source_data_was_incorrect = Source data was incorrect
+information_was_not_available = Information was not available
