Fixes #1120: Changed the confirm/welcome message on the change study page and changed the widget's titles. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1221 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -89,6 +89,8 @@ choose_browser = ClinCapture has been tested using Internet Explorer 7, \
 
 choosing_switch_to_study = You are choosing to switch to the study
 
+choosing_switch_to_site = You are choosing to switch to the site
+
 clear_search_keywords = Clear Search Keywords
 
 click_event_subject_attributes_specify = You may also click Event Attributes/Subject Attributes to specify which event/subject attribute will be included in the dataset.
