--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3193,9 +3193,9 @@ customize_home_page = Customize Home Page
 
 # widgets headers
 nds_assigned_to_me_widget_header = My Discrepancies
-events_completion_widget_header = Events Completion
-subject_status_count_widget_header = Subject Status Count
-study_progress_widget_header = Study Progress
+events_completion_widget_header = Event Status by Events
+subject_status_count_widget_header = Subject Status Summary
+study_progress_widget_header = Events Status Summary
 
 # toolbar header
 available_widgets = Available Widgets
