Fixes #1055: Rework the email subject sent on study role revocation. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1259 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
@@ -173,3 +173,42 @@ __username = Username
 __job_fired_success =The Job completed successfully. 
 __job_fired_fail =The Job failed to complete successfully.
 
+#audit log i18l
+item_data_value_updated=Item data value updated
+study_subject_created=Study subject created
+study_subject_status_changed=Study subject status changed
+study_subject_value_changed=Study subject value changed
+subject_created=Subject created
+subject_status_changed=Subject status changed
+subject_global_value_changed=Subject global value changed
+event_crf_marked_complete=Event CRF marked complete
+event_crf_properties_changed=Event CRF properties changed
+event_crf_initial_data_entry_complete=Event CRF Initial Data Entry complete
+event_crf_double_data_entry_complete=Event CRF Double Data Entry complete
+item_data_status_changed=Item data status changed
+item_data_deleted=Item data deleted
+event_crf_complete_with_password=Event CRF complete with password
+event_crf_initial_data_entry_complete_with_password=Event CRF Initial Data Entry complete with password
+event_crf_double_data_entry_complete_with_password=Event CRF Double Data Entry complete with password
+study_event_scheduled=Study Event scheduled
+study_event_data_entry_started=Study Event data entry started
+study_event_completed=Study Event completed
+study_event_stopped=Study Event stopped
+study_event_skipped=Study Event skipped
+study_event_locked=Study Event locked
+study_event_removed=Study Event removed
+study_event_start_date_changed=Study Event start date changed
+study_event_end_date_changed=Study Event end date changed
+study_event_location_changed=Study Event location changed
+subject_site_assignment=Subject Site Assignment
+subject_group_assignment=Subject Group Assignment
+subject_group_changed=Subject Group changed
+item_data_inserted_for_repeating_row=Item data inserted for repeating row
+study_event_signed=Study Event signed
+eventcrf_sdv_status=EventCRF SDV Status
+study_event_restored=Study Event restored
+study_event_deleted=Study Event deleted
+study_event_source_data_verified=Study Event source data verified
+item_data_skipped=Item data value skipped
+
+medical_coding = Medical Coding
