--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -4,8 +4,6 @@ CRF_name_used_by_another_CRF_choose_unique = CRF name has been used by another C
 
 CRF_name_used_choose_unique_name = CRF name has been used, please choose a unique name.
 
-SE_does_not_belong_current_study = study event does not belong to the current study
-
 all_values_must_from_specified = All of the values you choose must be from the specified response set.
 
 an_invalid_step_was_specified = An invalid step was specified while editing a user.
@@ -17,6 +15,8 @@ another_assigned_this_ID_choose_unique = Another subject has been assigned this 
 anwer_not_match = Your answers for this value did not match.  Please provide answers that match one another.
 
 argument = argument
+
+at_least_one_element_should_be_selected = At least one element should be selected
 
 begin_data_entry_without_event_but_CRF = You are trying to begin data entry for a CRF within a Study Event, but the specified CRF version does not exist.
 
@@ -72,6 +72,8 @@ function_is_invalid_or_not_supported = is not a valid function or has not been s
 
 group_class_is_required = This group class is required.
 
+group_class_name_used_choose_unique = Group Class name has been used, please choose a unique name.
+
 group_class_type_is_required = Group Class Type is required.
 
 has_already_enrolled_parent_study = has already been enrolled in the parent study.
@@ -102,6 +104,8 @@ input_not_partial_date = The input does not match your partial date format
 
 input_not_valid_date = The input you provided is not a valid date in\t
 
+input_not_valid_pdate = The input you provided is not a valid partial date in\t
+
 input_not_valid_date_time = The input you provided is not a valid date/time in\t
 
 input_not_valid_email = The input you provided is not a valid email address in\t
@@ -129,6 +133,8 @@ is_not_a_number = is not a number
 item_save_failed_because_database_error = The following items cannot be saved into database because of database error:
 
 maximum_lenght_brief_summary_255 = The maximum length of Brief Summary is 255 characters.
+
+maximum_lenght_brief_summary_2000 = The maximum length of Brief Summary is 2000 characters.
 
 maximum_lenght_name_100 = The maximum length of Brief Title is 100 characters.
 
@@ -234,6 +240,8 @@ please_choose_a_CRF_version_to_update = Please choose a CRF to update.
 
 please_choose_a_subject_to_remove = Please choose a subject to remove.
 
+please_choose_the_gender_of_the_subject = Please choose the gender of the subject.
+
 please_choose_valid_female_subject_as_mother = Please choose a valid female subject as the mother.
 
 please_choose_valid_male_subject_as_father = Please choose a valid male subject as the father.
@@ -241,6 +249,24 @@ please_choose_valid_male_subject_as_father = Please choose a valid male subject 
 please_enter_a_valid_year_birth = Please enter a valid Year Of Birth.
 
 please_have_user_manage_privileges = \ please have a user with Manage Study privileges reassign the subject.
+
+pwd_needs_digits = Password should contain at least one digit.
+
+pwd_needs_lower_case = Password should contain at least one lower case character.
+
+pwd_needs_special_chars = Password should contain at least one special character (!, @, #, $, %, &, *, (, )) 
+
+pwd_needs_upper_case = Password should contain at least one upper case character.
+
+pwd_too_long = Password cannot be more than 
+
+pwd_too_short = Password must be at least 
+
+pwd_min_greater_than_max=The maximum password length must be greater than or equal the minimum length. 
+
+pwd_cannot_reuse=The new password cannot be the same as the old password
+
+chars=characters.
 
 regular_expression_is_blank = The regular expression is blank.
 
@@ -338,3 +364,66 @@ correct_width_decimal_pattern = The correct pattern should be \"w(d)\" or \"w\" 
 or_language_mismatched = or language mismatched
 
 field_not_have_colons_or_semi = This field cannot have colons or semicolons or asterisk.
+
+maximum_lenght_studySubjectIdLabel_255 = The maximum length of Study Subject ID Label is 255 characters.
+maximum_lenght_secondaryIdLabel_255 = The maximum length of Secondary ID label is 255 characters.
+maximum_lenght_dateOfEnrollmentForStudyLabel_255 = The maximum length of Date of Enrollment for Study Label is 255 characters.
+maximum_lenght_genderLabel_255 = The maximum length of Gender Label is 255 characters.
+maximum_lenght_startDateTimeLabel_255= The maximum length of Start Date Time Label is 255 characters.
+maximum_lenght_endDateTimeLabel_255= The maximum length of End Date Time Label is 255 characters.
+
+# Error messages for accessing the OpenClinica page with Restful URL
+invalid_study_oid = Invalid study OID
+
+invalid_subject_oid = Invalid subject OID
+
+invalid_event_oid = Invalid event OID
+
+invalid_event_ordinal = Invalid event ordinal
+
+event_ordinal_not_specified = Event ordinal not specified
+
+invalid_crf_oid = Invalid case report form OID
+ 
+removed_crf = Case report form is removed
+
+either_no_data_for_crf_or_data_entry_not_started = Either data entry is not started or data was entered for some another CRF version
+
+this_user_name_does_not_exist = This user name does not exist in the database
+
+a_user_has_entered_data_for_subject_min = The {1} event completed sooner than expected for subject {0}
+a_user_has_entered_data_for_subject_max = The {1} event completed later than expected for subject {0}
+data_has_enteret_too_early_in_the_calendar = Event was completed earlier than expected.
+data_has_enteret_too_late_in_the_calendaror = Event was completed later than expected.
+
+daymax_greate_or_equal_dayschedule = Day Max should be greater than or equal to Day Schedule
+daymin_less_or_equal_dayschedule = Day Min should be less or equal than Day Schedule
+daymin_less_or_equal_daymax = Day Min should be less than or equal to Day Max
+dayemail_less_or_equal_dayschedule = Day Email should be less than or equal to Day Schedule
+
+# Ticket 130
+dataset_should_not_contain_any_special = The Dataset Name should not contain any special symbols, only spaces, letters and numbers.
+
+email_action_processor_exception = The system was supposed to send an email alert, but your server's connection to email does not work. Please contact your System Administrator for more details.
+
+error.systemProperty.shouldBeInteger=The value of the ''{0}'' field should be Integer
+error.systemProperty.shouldBeFloat=The value of the ''{0}'' field should be Float
+error.systemProperty.isRequired=The ''{0}'' field is required
+
+error.systemCommand.dataWasNotSaved=Sorry, your system properties were not saved. Talk with system administrator or try it again later.
+
+system_no_permission=No permission to configure system properties page
+
+error.systemProperty.logoFile.maxFileSizeExceeded=The maximum size of the logo file should be 20000 bytes.
+
+error.systemProperty.logoFile.forbiddenExtention=You can upload logo files with the .jpg or .jpeg extention only
+
+error.controllerErrorMsg=Sorry, an error has occurred. Try it again or contact your system administrator.
+
+sasDataset.exception.failed=Job: {0}. After {1} hour{2} the SAS dataset was not generated.
+sasDataset.exception.folder=The ''{0}'' folder was specified but it does not exist. The next fire time is: {1}
+sasDataset.exception.zip=The ready.txt was found but the sas dataset zip was not found. The next fire time is: {0}
+sasDataset.exception.sasExtractFolder=You should specify the SAS extract folder on the system properties page.
+sasDataset.exception.sasFolder=The ''{0}'' folder was specified but it does not exist.
+
+error.toAddRoleForTheStudyRemoveTheSiteLevelRoleFirst = To add a study role for ''{0}'' study you should remove the site roles for this study first.
