--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -19,7 +19,7 @@ Boolean_Non_Null = Boolean Non-Null
 City_of_Birth = City of Birth
 
 Closed = Closed
-
+#DO NOT CHANGE THE TEXT FOR DATA ENTRY PERSON
 Data_Entry_Person = Data Entry Person
 
 Demographic = Demographic
@@ -61,6 +61,7 @@ Study_Administrator = Study Administrator
 Investigator = Investigator
 
 Clinical_Research_Coordinator = Clinical Research Coordinator
+study_coder = Study Coder
 
 MSK = MSK
 
@@ -250,6 +251,8 @@ not_applicable = Not Applicable
 
 not_asked = not asked
 
+not_assigned = Not Assigned
+
 not_available = not available
 
 not_equal_to = not equal to
@@ -352,6 +355,8 @@ xml_file_to_upload = Upload an XML file here
 Update = Update
 Propose_Resolution = Propose Resolution
 Close = Close
+update_note = Update Note
+close_note = Close Note
 rule_import_getting_started = Getting started with rules
 rule_import_example_rules = Example rules
 rule_import_templates= Templates
@@ -363,6 +368,14 @@ rule_import_all_actions_with_notes= All actions (with comments)
 rule_import_all_actions_without_notes= All actions (without comments)
 rule_import_download_rules_xsd= Download ClinCapture rules.xsd
 rule_import_generic = All actions (without comments)
+
+Query_and_Failed_Validation_Check = Query and Failed Validation Check
+New_and_Updated = New and Updated
+
+source_data_verified = source data verified
+deleted = deleted
+
+unlock=unlock
 
 # ClinCapture #86 "Not Closed" DN's status
 Not_Closed = Not Closed
