Fixes #1126: Add support for dual column widgets. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1313 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3205,6 +3205,8 @@ study_progress_widget_header = Events Status Summary
 
 # toolbar header
 available_widgets = Available Widgets
+one_column_widgets = One-Column Widgets
+two_column_widgets = Two-Column Widgets
 
 import_summary_subjects_affected = Subjects: {0} affected
 import_summary_events_affected = Events: {0} affected
