Fixes #1238: Validation for the Bioontology URL & Bioontology API key on the study parameters page. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1345 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -425,3 +425,6 @@ sasDataset.exception.folder=The ''{0}'' folder was specified but it does not exi
 sasDataset.exception.zip=The ready.txt was found but the sas dataset zip was not found. The next fire time is: {0}
 sasDataset.exception.sasExtractFolder=You should specify the SAS extract folder on the system properties page.
 sasDataset.exception.sasFolder=The ''{0}'' folder was specified but it does not exist.
+
+please_remove_the_final_slash = Please remove the final slash.
+please_supply_the_biootology_api_key = Please supply the bioontology API key.
