Fixes #1135: Use the randomization result to change the SSID. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1366 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -461,6 +461,8 @@ password_failed = Your User Name and Password combination could not be found. Pl
 
 password_match = Your User Name and Password doesn't match, please try again.
 
+person_id_should_be_specifyed = Person ID should be specified.
+
 please_check_the_information_below_if_no_errors = Please check the information below. If no errors, please press the submit button to <br> send your information to the administrator.
 
 please_choose_a_study_in_the_following_list2 = Please choose a study in the following list:
