--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3356,6 +3356,12 @@ systemProperty.instanceType.production.radioLabel=Production
 systemProperty.logo.label=Logo
 systemProperty.logo.description=Upload your logo.  Must be .JPEG file with a maximum size of 20K.
 
+systemProperty.assignRandomizationResultTo.label=Assign randomization result to
+systemProperty.assignRandomizationResultTo.description=
+systemProperty.assignRandomizationResultTo.dngroup.radioLabel=Dynamic Group
+systemProperty.assignRandomizationResultTo.ssid.radioLabel=Study Subject ID
+systemProperty.assignRandomizationResultTo.none.radioLabel=Neither
+ 
 systemProperty.exportFilePath.label=Export path
 systemProperty.exportFilePath.description=This parameter configures the path for the exported datasets.  A subfolder in the system repository will be created.<br/><br/> \
   If this parameter is specified, scheduled jobs will Submit extracted datasets in two places: this directory and in the system repository.  If this parameter is not specified, \
