Fixes #1255: Rework the Manage Rules page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1372 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2665,6 +2665,7 @@ rule_restore_rule_assignments = Confirm Restore of Rule Assignment
 rule_restore_rule_assignments_button = Restore Rule Assignment
 rule_if_you_restore_this_assignments = If you restore this assignment, the rules will run in Data Entry or Bulk mode .  Are you sure you want to restore it?
 
+are_you_sure_to_delete_this_rule = Are you sure you want to delete this rule?
 rule_if_you_remove_this = If you remove this rule, it will not run in Data Entry or Bulk mode . The rule can be restored by a principal investigator. Are you sure you want to remove it?
 rule_if_you_restore_this = If you restore this rule, it will run as originally designed. Are you sure you want to restore it?
 
