Fixes #1177: Change the Person ID study parameter to allow copying over from SSID. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1374 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -630,6 +630,8 @@ control = Control
 
 copy = Copy
 
+copy_from_ssid = Copy From SSID
+
 couldnot_retrieve_news = Could not retrieve news.
 
 count = Count
