Fixes #969: Support Excel versions 2003-2013. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1381 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -441,9 +441,7 @@ of = of
 
 openclinica_enterprise_is_an_enhaced_version = <P>ClinCapture Enterprise is an enhanced version of ClinCapture, packaged and validated to strict standards of quality, bundled with Clinovo's Services and Support.  To find out more about Clinovo's Services and Support, you can visit <a href="http://www.openclinica.org/section.php?sid=4">ClinCapture</a>.
 
-openclinica_excel_support = ClinCapture is tested and supported with the use of Microsoft Excel 97-2003. If you are using a more recent version of Excel, please use the options to "save as 97-2003 version".
-
-ClinCapture does not support the use CRFs created with OpenOffice. \r\n
+openclinica_excel_support = ClinCapture is tested and supported with the use of Microsoft Excel 1997-2003 and Microsoft Excel 2007-2013. ClinCapture does not support the use CRFs created with OpenOffice. \r\n
 
 openclinica_org_user_account_required = (ClinCapture user account required).
 
