Fixes #1176: Rules enhancement to be able to email a CRF. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1389 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2761,6 +2761,8 @@ sdv_requirement_type = SDV Requirement Type
 sdv_required_percent_complete = SDV Required % Complete
 select_all_on_page = Select All On The Page
 complete = complete
+send_email_on = Send Email on CRF
+email_crf_to = Email To
 create_site_properties = Create Site Properties
 set_study_status =  Set Study Status
 
