--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -1,4 +1,3 @@
-
 As_a_Technical_Administrator_you_have_privileges_to = As a Technical Administrator you have privileges to administer everything that a Business Administrator can--all subjects, users, CRFs and studies/sites created across the system. Technical Administrators have 'super-user' privileges over other user accounts and may not be disabled or modified by Business Administrators.
 
 CRF_library_shows_all_CRFs = The Case Report Form (CRF) Library shows all CRFs available for use in studies. CRFs may have one or more versions, each with its own version name. You may add any existing CRF to a Study Event Definition in your study. You may also create a new ClinCapture CRF or CRF version using the Excel template provided below and uploading it to the system.
@@ -217,6 +216,8 @@ enter_dataset_properties_be_descriptive = Please enter the dataset properties in
 
 # View Data Entry
 enter_note_for_item = Click the flag icon next to an input to enter/view discrepancy notes. Please note that you can only save the notes if CRF data entry has already started.
+
+enter_valid_email = Please enter a valid email
 
 entering_data_interviewer_name_required = When Performing Data Entry, Interviewer Name Required?
 
