Fixes #1119: Remove Event for Subject shows the wrong Study Info at top of page. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1392 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1704,6 +1704,8 @@ remove_event_definition = Remove Event Definition
 
 remove_event_for_subject = Remove Event for Subject
 
+restore_event_for_subject = Restore Event for Subject
+
 remove_event_from_study = Remove Event from Study
 
 remove_filter = Remove Filter
