Fixes #1102: Logo update is not working. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1403 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -410,7 +410,7 @@ error.systemProperty.shouldBeInteger=The value of the ''{0}'' field should be In
 error.systemProperty.shouldBeFloat=The value of the ''{0}'' field should be Float
 error.systemProperty.isRequired=The ''{0}'' field is required
 
-error.systemCommand.dataWasNotSaved=Sorry, your system properties were not saved. Talk with system administrator or try it again later.
+error.systemCommand.dataWasNotSaved=Sorry, your system properties were not saved. Contact your system administrator or try it again later.
 
 system_no_permission=No permission to configure system properties page
 
