Fixes #1250: User is able to ‘Add Subject’ in Study Administrator role. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1430 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -415,6 +415,8 @@ no_events_within_parameters = There are no study events within the requested par
 
 no_have_correct_privilege_current_study = You don't have correct privilege in your current active study.
 
+no_have_correct_privilege_to_add_subject = You don't have correct privilege to add subjects.
+
 no_have_correct_privilege_current_study_to_manage_user_roles = You don't have correct privilege in your current active study to manage user roles.
 
 no_other_studies_and_roles_available = No other studies and roles available.
