Fixes #73: Edit Check run in Batch must produce the same result as Interactive checks. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1438 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3093,7 +3093,8 @@ save_profile_changes = Save Profile Changes
 create_new_dataset = Create new Dataset
 submit_for_dataset = Submit
 view_all_datasets = View All Datasets
-rule_execute_rule_bottom_message1 = View the affected subjects for each action listed by clicking 'Show Affected Subjects'.Then click 'Submit' to execute the actions shown for those subjects. If you choose 'Exit', no actions will be taken.
+rule_execute_rule_bottom_message1 = View the affected subjects for each action listed by clicking 'Show Affected Subjects'.
+rule_execute_rule_bottom_message2 =  Then click 'Submit' to execute the actions shown for those subjects. If you choose 'Exit', no actions will be taken.
 update_import_job = Update Import Job
 error_message_cannot_update_crf_version=Cannot update CRF version for the Subject.
 create_an_import_job = Create an Import Job
@@ -3477,4 +3478,6 @@ systemProperty.ccts.waitBeforeCommit.description=This parameter is used for Clin
   transaction from C3PR and will wait for a roll back message before committing it to the database.
 systemProperty.ccts.waitBeforeCommit.measurements=(in milliseconds)
 create_rule=Design a Rule
+there_are_no_rules = There are no Rules in this CRF, or there were no results from running Rules on all your current Subjects.
+there_are_no_rules1 = If you think this is an error, please review the Rules for this CRF and their settings by clicking
 
