Fixes #1245: VAL - Site name is fetched instead of Study name in Alerts & Messages while removing and restoring an event from the subject. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1453 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -335,6 +335,8 @@ in_site = \ in Site
 
 in_the_study = \ in the Study
 
+in_the_site = \ in the site
+
 in_the_study_site = in the Study/Site
 
 incomplete_option_value_pair = There are an incomplete number of option-value pairs in
