Fixes #1213: VAL - Alert message is not displayed when editing the Import Job. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1457 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -428,3 +428,6 @@ sasDataset.exception.sasFolder=The ''{0}'' folder was specified but it does not 
 
 please_remove_the_final_slash = Please remove the final slash.
 please_supply_the_biootology_api_key = Please supply the bioontology API key.
+
+unspecified_error_with_job_creation=There was an unspecified error with your creation, please contact an administrator.
+job_modification_error=Your modifications caused an error, please see the messages for more information.
