--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3480,4 +3480,5 @@ systemProperty.ccts.waitBeforeCommit.measurements=(in milliseconds)
 create_rule=Design a Rule
 there_are_no_rules = There are no Rules in this CRF, or there were no results from running Rules on all your current Subjects.
 there_are_no_rules1 = If you think this is an error, please review the Rules for this CRF and their settings by clicking
+job_modified_successfully=Your job has been successfully modified.
 
