Fixes #1280: Generate and send email with CRF-report when CRF complete. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1462 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -131,6 +131,10 @@ could_not_created_due_database_error = \ could not be created due to a database 
 
 crf_name_already_used = This CRF name has already been used. Either change the name of this CRF, or go back and create a new version for the CRF.
 
+crf_report_email_body = CRF has been {0} successfully. Please review subject's data attached to this letter.
+
+crf_report_message = Report for subject {0} and CRF {1}.
+
 crf_version_archived_successfully = The CRF version has been archived.
 
 crf_version_locked_successfully = The CRF Version has been locked.
@@ -138,6 +142,10 @@ crf_version_locked_successfully = The CRF Version has been locked.
 crf_version_unarchived_successfully = The CRF version has been unarchived.
 
 crf_version_unlocked_successfully = The CRF Version has been unlocked.
+
+crf_report_was_not_sent_successfully_message = CRF report was not sent successfully.
+
+crf_report_was_sent_successfully_message = CRF report was generated and sent successfully.
 
 import_study_frozen = The site or study for this import job is Frozen, and cannot import data.
 
@@ -739,6 +747,8 @@ subject_updated_succcesfully = The subject has been updated successfully.
 
 subject_with_unique_identifier = The subject with unique identifier '
 
+thank_you_message = Thank you,<br/>{0} Team.
+
 the = The
 
 the_CRF = The CRF\u0009
@@ -1188,6 +1198,8 @@ disc_note_info = <P>Discrepancy Note Information:</P>
 entity_info = <P>Entity Information:</P>
 
 email_body_separator = <br>==============================================================\n
+
+email_body_simple_separator = <br>
 
 entity_information = <P>Entity Information:</P>
 
