--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -702,6 +702,8 @@ created_date = Created Date
 
 crf_version_ID = CRF Version ID
 
+crf_report = CRF Report
+
 criteria = Criteria
 
 cross_sectional = Cross-sectional
